2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Attribute.h: Fix doxygen comments.
	* include/mageec/AttributeSet.h: Likewise.
	* include/mageec/Database.h: Likewise.
	* include/mageec/DatabaseQuery.h: Likewise.
	* include/mageec/ML.h: Likewise.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* doc/CMakeLists: Make and install pdf documentation.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* lib/Driver.cpp (getMachineLearners): Remove wildcard match for
	--ml flag.
	(trainDatabase): Add debug when training for each metric.
	* lib/FileML.cpp: Fix gcc warnings and errors.
	* lib/Util.cpp: Likewise.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Use sane defaults for options, add option for
	the GCC plugin include directory.
	* doc/CMakeLists.txt: Rename all-doc, all-info, all-html, all-pdf to
	just doc, info, html and pdf respectively.
	* lib/ML/C5/CMakeLists.txt: Added a minimum required version.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Database.h (Database::addFeaturesAfterPass):
	Removed method, continuous feature extraction interface removed.
	* lib/Database.cpp (create_compilation_feature_table):
	Removed SQL query.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/ML.h: Remove iterative training interfaces.
	* include/mageec/ML/C5.h: Likewise.
	* include/mageec/ML/FileML.h: Likewise.
	* lib/ML/C5.cpp: Likewise.
	* lib/ML/FileML.cpp: Likewise.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Types.h (TypeID ID): Define integer types that
	mageec enumerations and IDs are based on.
	* lib/Database.cpp: Use mageec::ID where appropriate to improve
	type safety.

2016-01-13  Edward Jones  <ed.jones@embecosm.com>

	* include/mageec/Attribute.h: Added file.
	* include/mageec/AttributeSet.h: Likewise.
	* include/mageec/Feature.h: Removed file.
	* include/mageec/FeatureSet.h: Likewise.
	* include/mageec/Parameter.h: Likewise.